--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "email-validator": "^2.0.4",
+    "ts-pattern": "^5.0.5",
     "vue": "^3.3.4"
   },
   "devDependencies": {
